sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:14: error: not found: value j
        echange(j,j+1);b=b+1
                ^AlgCocktailSort1:14: error: not found: value j
        echange(j,j+1);b=b+1
                  ^